# knowledge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  USER.md  api_guilde.md  api_models.py  chunker.py  config.py  db_schema.py  doc_parser.py  docker-compose.yml  embedding_service.py  faq_ingestion.py  file_ingestion.py  ingestion_pipeline.py  main.py  openapi.json  pyproject.toml  rag_doc_ingestion_plan_v2.md  schema.json  text_ingestion.py  toc_extractor.py
.openclaw/: IDENTITY.md  workspace-state.json
kblib/: __init__.py  azure_auth.py  file.py  filestrategy.py  prepdoc_util.py  strategy.py  textstrategy.py  vector_db.py
scripts/: create_postgres_tables.sql  create_sqlite_tables.sql  export_api.py
test_dataset/: AI自动化客服平台_产品梳理与技术分析.docx  三方系统接入钉钉授权系统流程文档.docx
tests/: test_page_range_with_realistic_doc.py  test_real_documents.py
