[tool.poetry]
name = "knowledgebase"
version = "0.1.0"
description = "RAG 知识库文档摄入服务 — 支持多格式解析、TOC 驱动分块、多模态 Embedding"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# ── Web 框架 ──────────────────────────────────────────────────────────────────
fastapi        = "^0.115"
uvicorn        = { version = "^0.34", extras = ["standard"] }
pydantic       = "^2.0"
python-dotenv  = "^1.0"

# ── 向量数据库（pgvector）────────────────────────────────────────────────────
asyncpg  = "^0.30"
pgvector = "^0.3"
numpy    = "^1.26"

# ── LLM / Embedding 客户端 ────────────────────────────────────────────────────
openai = "^1.0"     # TOC 抽取 LLM（OpenAI 兼容接口）
httpx  = "^0.27"    # vLLM Embedding 客户端

# ── 文档解析：通用 ─────────────────────────────────────────────────────────────
python-docx   = "^1.1"     # .docx
python-pptx   = "^1.0"     # .pptx
pandas        = "^2.2"     # .xlsx / .csv
openpyxl      = "^3.1"     # pandas Excel 引擎
tabulate      = "^0.9"     # pandas.to_markdown()
beautifulsoup4 = "^4.12"   # .html
lxml           = "^5.0"    # BeautifulSoup HTML 解析器

# ── 文档解析：PDF（MinerU）── 可选，GPU 环境下安装 ─────────────────────────────
# magic-pdf 体积较大，默认放在可选分组（full 依赖在部分平台不可解）
magic-pdf = { version = "^0.9", optional = true }

# ── 本地 Embedding（Transformers）── 可选，生产环境用 vLLM ────────────────────
torch        = { version = "^2.3",  optional = true }
transformers = { version = "4.42.4", optional = true }
Pillow       = { version = "^10.0", optional = true }

# ── Blob 存储 ── 可选，根据后端选择 ─────────────────────────────
aiobotocore        = { version = "^2.13", optional = true }  # S3 / MinIO
aiohttp            = { version = "^3.10", optional = true }  # aiobotocore 依赖
azure-storage-blob = { version = "^12.0", optional = true }  # Azure Blob
python-multipart = "^0.0.22"

[tool.poetry.extras]
# pip install knowledgebase[pdf]   → 启用 MinerU PDF 解析
pdf = ["magic-pdf"]

# pip install knowledgebase[local-embed]  → 启用本地 Qwen Embedding
local-embed = ["torch", "transformers", "Pillow"]

# pip install knowledgebase[blob-s3]    → S3 / MinIO 对象存储
blob-s3 = ["aiobotocore", "aiohttp"]

# pip install knowledgebase[blob-azure] → Azure Blob Storage
blob-azure = ["azure-storage-blob"]

# pip install knowledgebase[all]   → 全部功能
all = ["magic-pdf", "torch", "transformers", "Pillow", "aiobotocore", "aiohttp", "azure-storage-blob"]

[tool.poetry.group.dev.dependencies]
pytest       = "^8.0"
pytest-asyncio = "^0.24"
httpx        = "^0.27"    # FastAPI TestClient
ruff         = "^0.6"
mypy         = "^1.11"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff（代码格式化 + Lint）─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
